# BUPTSignIn

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
api/: app.py
templates/: index.html  show.html  show_qr.html
