[project]
name = "buptsignin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.0",
    "numpy==2.2.4",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python==4.10.0.84",
    "pillow==11.1.0",
    "qrcode==8.0",
    "werkzeug==3.1.3",
]
